--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           sudo apt-get update -qq && sudo apt-get -y install \
             autoconf \
+            autogen \
             automake \
             build-essential \
             cmake \
