Create aar file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
             cmake \
             git-core \
             gettext \
+            groff \
             libass-dev \
             libfreetype6-dev \
             libgnutls28-dev \
@@ -110,4 +111,3 @@ jobs:
         with:
           name: ffmpeg-kit-full-android-aars
           path: prebuilt/android-aar/
-
