--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
             git-core \
             gettext \
             groff \
+            gnulib \
             gtk-doc-tools \
             libass-dev \
             libfreetype6-dev \
