--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             libxinerama-dev libxkbcommon-dev libxml2-dev libxrandr-dev \
             libxrender-dev libxss-dev libxt-dev libxv-dev libxxf86vm-dev \
             llvm-18-dev meson nasm ninja-build openjdk-17-jdk pkg-config \
-            texinfo uuid-dev wget x11proto-dev xsltproc xtrans-dev yasm zlib1g-dev
+            ragel texinfo uuid-dev wget x11proto-dev xsltproc xtrans-dev yasm zlib1g-dev
 
       # 3. Set up JDK 17, mirroring the official ffmpeg-kit workflow.
       - name: Set up Adopt JDK 17
