--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,4 +145,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ffmpeg-kit-full-android-aars
-          path: prebuilt/android-aar/
+          path: prebuilt/bundle-android-aar/
