Create aar file for v8a, v7a, x86-64 only

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,8 @@ jobs:
         run: |
           chmod +x android.sh
           ./android.sh \
+            --disable-x86 \
+            --disable-arm-v7a-neon \
             --enable-gpl \
             --enable-android-media-codec \
             --enable-android-zlib \
